; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmfmac/extr_pcie.c_brcmf_pcie_quick_check_isr.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/broadcom/brcm80211/brcmfmac/extr_pcie.c_brcmf_pcie_quick_check_isr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcmf_pciedev_info = type { i32 }

@BRCMF_PCIE_PCIE2REG_MAILBOXINT = common dso_local global i32 0, align 4
@PCIE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"Enter\0A\00", align 1
@IRQ_WAKE_THREAD = common dso_local global i32 0, align 4
@IRQ_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @brcmf_pcie_quick_check_isr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @brcmf_pcie_quick_check_isr(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca %struct.brcmf_pciedev_info*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %5, align 8
  %8 = bitcast i8* %7 to %struct.brcmf_pciedev_info*
  store %struct.brcmf_pciedev_info* %8, %struct.brcmf_pciedev_info** %6, align 8
  %9 = load %struct.brcmf_pciedev_info*, %struct.brcmf_pciedev_info** %6, align 8
  %10 = load i32, i32* @BRCMF_PCIE_PCIE2REG_MAILBOXINT, align 4
  %11 = call i64 @brcmf_pcie_read_reg32(%struct.brcmf_pciedev_info* %9, i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %19

13:                                               ; preds = %2
  %14 = load %struct.brcmf_pciedev_info*, %struct.brcmf_pciedev_info** %6, align 8
  %15 = call i32 @brcmf_pcie_intr_disable(%struct.brcmf_pciedev_info* %14)
  %16 = load i32, i32* @PCIE, align 4
  %17 = call i32 @brcmf_dbg(i32 %16, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %18 = load i32, i32* @IRQ_WAKE_THREAD, align 4
  store i32 %18, i32* %3, align 4
  br label %21

19:                                               ; preds = %2
  %20 = load i32, i32* @IRQ_NONE, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %19, %13
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i64 @brcmf_pcie_read_reg32(%struct.brcmf_pciedev_info*, i32) #1

declare dso_local i32 @brcmf_pcie_intr_disable(%struct.brcmf_pciedev_info*) #1

declare dso_local i32 @brcmf_dbg(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
